--- a/index.html
+++ b/index.html
@@ -143,21 +143,35 @@ st.write("## Work Experience")
 with st.container(border=True):
     st.markdown("### Embedded Systems Engineer")
     st.caption(":material/pin_drop: **Bugg Design & Services/The Propz Company** :material/calendar_today: **OCT/2021 - FEB/2023**")
-    st.markdown("Responsible for overseeing all aspects of electronics integration and design, \\
-                including microcontrollers, sensors, and PCBs, into new or existing products, \\
-                in addition to CAD and prototyping using additive manufacturing.")
+    st.markdown("Responsible for all aspects of electronics design and integration with new or exsisting products.")
+    st.markdown("""
+                - Develop electronics based solution for a myriad of simple to complex operational challenges.
+                - Identify and source for required electronics components such as micro-controllers and sensors.
+                - Fabricate solutions, using methods such as CAD, additive manufacturing, laser cutting and PCB design.
+                - Assist in ad-hoc software related tasks, including writing of automation scripts and data analysis.
+                """)
 
 with st.container(border=True):
     st.markdown("### Assistant Engineer")
     st.caption(":material/pin_drop: **KISTAR Pte Ltd** :material/calendar_today: **JAN/2022 - MAR/2022**")
     st.markdown("Assist in the installation and commissioning of sensor packages onboard container gantry \\
                 cranes at Pasir Panjang terminal")
+    st.markdown("""
+                - Updating of programmable logic controllers.
+                - Diagnostic and troubleshooting of laser rangefinding systems.
+                - Perform maintenance and ensure reliability of equipment before commissioning.
+                """)
 
 with st.container(border=True):
     st.markdown("### Assistant Engineer")
     st.caption(":material/pin_drop: **ST Electronics** :material/calendar_today: **MAR/2017 - AUG/2017**")
     st.markdown("Installation and maintenance of electronic upgrade packages on government vehicles. \\
-                Logistical and administrative support for on-site engineers.")
+                ")
+    st.markdown("""
+            - Installation of various electronics components into vehicle bodywork.
+            - Peform diagnostic and troubleshooting of upgrade package
+            - Logistical and administrative support for on-site engineers.
+            """)
 
 
 # Education
