--- a/index.html
+++ b/index.html
@@ -200,9 +200,8 @@ with st.container(border=True):
                  :material/calendar_today: **AUG/2020 - MAY/2021**")
 
     with st.expander("**:red-background[Withdrew from programme]**"):
-        st.write('''
-            TODO
-        ''')
+        st.write("Enrolled for two semesters, but could not feel any passion towards the field. Made the decision\\
+                 to withdraw in order to pursue other goals and interests.")
 
 with st.container(border=True):
     st.markdown("### Diploma in Engineering with Business")
@@ -210,12 +209,45 @@ with st.container(border=True):
 
 st.write("##### ")
 
-# Certifications
-st.subheader("Certifications", divider="grey")
+# Technical Certifications
+st.subheader("Technical Certifications", divider="grey")
+
+with st.container(border=True):
+    st.markdown("### Laser Cutting Certification")
+    st.caption(":material/pin_drop: **MakeIT at NLB** :material/verified_user: **APR/2029** :material/update: **Expiry: APR/2029**")
+
+with st.container(border=True):
+    st.markdown("### WSQ Work at Height")
+    st.caption(":material/pin_drop: **Wong Fong Academy** :material/verified_user: **FEB/2022**")
+
+st.write("##### ")
+
+# Others
+st.subheader("Others", divider="grey")
+
+with st.container(border=True):
+    st.markdown("### Certificate in Fundamentals of Data Science")
+    st.caption(":material/pin_drop: **Singapore Polytechnic** :material/calendar_today: **SEP/2023**")
+
+with st.container(border=True):
+    st.markdown("### Certificate in Visual and Textual Data Analytics")
+    st.caption(":material/pin_drop: **Singapore Polytechnic** :material/calendar_today: **SEP/2023**")
+
+with st.container(border=True):
+    st.markdown("### Certificate in Artificial Intelligence")
+    st.caption(":material/pin_drop: **Singapore Polytechnic** :material/calendar_today: **MAR/2023**")
+
+with st.container(border=True):
+    st.markdown("### CCA Gold with Honours")
+    st.caption(":material/pin_drop: **Singapore Polytechnic** :material/calendar_today: **MAR/2018**")
+
+st.write("##### ")
+
+st.page_link("https://raw.githubusercontent.com/ExpiredTapWater/AAI3001-Small-Project/refs/heads/main/kaggle.png", \\
+            label="Download PDF", icon=":material/download:")
 
 
-
-`,
+st.write("### ")`,
 
 },
   },
